--- a/static/form.html
+++ b/static/form.html
@@ -27,7 +27,9 @@
                 border-radius: 0.375rem;
                 padding: 0.5rem 1rem;
                 box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-                transition: border-color 0.2s, box-shadow 0.2s;
+                transition:
+                    border-color 0.2s,
+                    box-shadow 0.2s;
             }
             select:focus {
                 border-color: #6366f1;
@@ -45,7 +47,7 @@
             <form
                 action="/submit"
                 method="post"
-                enctype="application/x-www-form-urlencoded"
+                enctype="application/x-www-form-urlencoded;charset=UTF-8"
                 class="space-y-6"
             >
                 <div class="mb-6">
@@ -59,7 +61,9 @@
                         name="variant"
                         class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
                     >
-                        <option value="" selected disabled>Select a variant</option>
+                        <option value="" selected disabled>
+                            Select a variant
+                        </option>
                         {{variants}}
                     </select>
                 </div>
@@ -127,9 +131,7 @@
                         class="w-full inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                     />
                 </div>
-                <div class="text-center">
-                    {{version}}
-                </div>
+                <div class="text-center">{{version}}</div>
             </form>
         </div>
     </body>
