Add isa selector to serv. Remove dead comments.

--- a/static/form.html
+++ b/static/form.html
@@ -70,6 +70,26 @@
 
                 <div class="mb-6">
                     <label
+                        for="isa"
+                        class="block text-sm font-medium text-gray-700"
+                        >ISA:</label
+                    >
+                    <select
+                        id="isa"
+                        name="isa"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+                    >
+                        <option value="risc-iv-32" selected>
+                            risc-iv-32
+                        </option>
+                        <option value="f32a">
+                            f32a
+                        </option>
+                    </select>
+                </div>
+
+                <div class="mb-6">
+                    <label
                         for="name"
                         class="block text-sm font-medium text-gray-700"
                         >Author Name:</label
