Make textarea monoscaped. Fix in testcase report.

--- a/static/form.html
+++ b/static/form.html
@@ -16,6 +16,15 @@
       }
       textarea {
         min-height: 20rem; /* Expand to avoid scrolling */
+        font-family:
+          Consolas,
+          Monaco,
+          Lucida Console,
+          Liberation Mono,
+          DejaVu Sans Mono,
+          Bitstream Vera Sans Mono,
+          Courier New,
+          monospace;
       }
       #comment {
         min-height: 5rem; /* Smaller height for comment section */
