Add acc32 to wrench server and dump for report.

--- a/static/form.html
+++ b/static/form.html
@@ -84,6 +84,7 @@
           >
             <option value="risc-iv-32" selected>risc-iv-32</option>
             <option value="f32a">f32a</option>
+            <option value="acc32">acc32</option>
           </select>
         </div>
 
