--- a/static/result.html
+++ b/static/result.html
@@ -114,6 +114,39 @@
               >
             </div>
           </div>
+          <div id="accordion-collapse" data-accordion="collapse" class="mb-4">
+            <h2
+              id="accordion-collapse-heading-3"
+              class="flex items-center justify-between w-full p-4 font-medium text-left text-gray-500 bg-gray-100 border border-gray-200 rounded-lg focus:ring-4 focus:ring-gray-200"
+              data-accordion-target="#accordion-collapse-body-3"
+              aria-expanded="false"
+              aria-controls="accordion-collapse-body-3"
+            >
+              <span>Dump</span>
+              <svg
+                data-accordion-icon
+                class="w-6 h-6 shrink-0 rotate-180"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+            </h2>
+            <div
+              id="accordion-collapse-body-3"
+              class="hidden"
+              aria-labelledby="accordion-collapse-heading-3"
+            >
+              <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm">
+  {{dump}}</pre
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
