Fix additional space in result.dump

--- a/static/result.html
+++ b/static/result.html
@@ -142,8 +142,7 @@
               class="hidden"
               aria-labelledby="accordion-collapse-heading-3"
             >
-              <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm">
-  {{dump}}</pre
+              <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm">{{dump}}</pre
               >
             </div>
           </div>
