Add link to report title.

--- a/static/result.html
+++ b/static/result.html
@@ -15,7 +15,7 @@
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full m-4">
-      <h1 class="text-2xl font-bold mb-6 text-center">Wrench Report</h1>
+      <h1 class="text-2xl font-bold mb-6 text-center"><a href="/">Wrench Report</a></h1>
       <div class="flex flex-wrap gap-4">
         <div class="flex-1 min-w-[300px] max-w-[60%]">
           <p class="text-left mb-4"><strong>Author:</strong> {{name}}</p>
