--- a/static/result.html
+++ b/static/result.html
@@ -12,6 +12,62 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body,
+      h1,
+      label,
+      textarea,
+      input[type="text"],
+      select,
+      a {
+        font-family:
+          "Anonymous Pro",
+          Consolas,
+          Monaco,
+          Lucida Console,
+          Liberation Mono,
+          DejaVu Sans Mono,
+          Bitstream Vera Sans Mono,
+          Courier New,
+          monospace;
+      }
+      textarea,
+      input[type="text"],
+      select {
+        font-size: 0.875rem; /* Smaller font size */
+      }
+      textarea {
+        min-height: 20rem; /* Expand to avoid scrolling */
+      }
+      #comment {
+        min-height: 5rem; /* Smaller height for comment section */
+      }
+      select {
+        appearance: none;
+        background-color: #fff;
+        border: 1px solid #d1d5db;
+        border-radius: 0.375rem;
+        padding: 0.5rem 1rem;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+        transition:
+          border-color 0.2s,
+          box-shadow 0.2s;
+      }
+      select:focus {
+        border-color: #6366f1;
+        box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.3);
+        outline: none;
+      }
+      select option {
+        padding: 0.5rem;
+      }
+    </style>
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full m-4">
