Add text wrap for result page.

--- a/static/result.html
+++ b/static/result.html
@@ -67,6 +67,9 @@
       select option {
         padding: 0.5rem;
       }
+      pre {
+        white-space: pre-wrap; /* Wrap lines in pre elements */
+      }
     </style>
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
