--- a/static/form.html
+++ b/static/form.html
@@ -63,6 +63,16 @@
       select option {
         padding: 0.5rem;
       }
+      @media (prefers-color-scheme: dark) {
+        * {
+          background-color: inherit;
+          color: inherit;
+        }
+        html,
+        img:not([src$='.svg']) {
+          filter: invert(1) hue-rotate(180deg);
+        }
+      }
     </style>
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
